--- a/package.json
+++ b/package.json
@@ -1,12 +1,21 @@
 {
 	"name": "eye",
+	"version": "0.0.0",
 	"author": "tycrek <t@tycrek.com> (https://tycrek.com)",
 	"scripts": {
 		"wrangler": "node ./node_modules/wrangler/bin/wrangler.js",
-		"dev": "npm run wrangler pages dev html/",
-		"publish": "node ./node_modules/wrangler/bin/wrangler.js pages publish html/ --project-name=eye"
+		"build": "esbuild --bundle src/index.ts --format=esm --outfile=dist/_worker.js",
+		"pagery": "node ./node_modules/pagery/dist/pagery.js --output=dist/",
+		"dev": "npm run build && npm run pagery && npm run wrangler pages dev dist/",
+		"publish": "npm run build && node ./node_modules/wrangler/bin/wrangler.js pages publish dist/ --project-name=eye"
+	},
+	"devDependencies": {
+		"@cloudflare/workers-types": "^4.20221111.1",
+		"pagery": "^0.2.1",
+		"typescript": "^4.9.4",
+		"wrangler": "^2.8.0"
 	},
 	"dependencies": {
-		"wrangler": "^2.8.0"
+		"hono": "^2.7.4"
 	}
 }
