--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Cloudflare Pages local environment variables
+.dev.vars
+
 # Created by https://www.toptal.com/developers/gitignore/api/node
 # Edit at https://www.toptal.com/developers/gitignore?templates=node
 
