build: add type support for future frontend TS

--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -3,7 +3,8 @@
 		"target": "esnext",
 		"module": "esnext",
 		"lib": [
-			"esnext"
+			"esnext",
+			"DOM"
 		],
 		"types": [
 			"@cloudflare/workers-types"
