--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
 	},
 	"devDependencies": {
 		"@cloudflare/workers-types": "^4.20230307.0",
+		"@shoelace-style/shoelace": "^2.4.0",
 		"pagery": "^0.4.0",
+		"shoelace-fontawesome-pug": "^6.2.1",
+		"shoelace-pug-loader": "^1.0.2",
 		"typescript": "^4.9.5",
 		"wrangler": "^2.12.2"
 	},
