--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
 		"publish": "npm run build && node ./node_modules/wrangler/bin/wrangler.js pages publish dist/ --project-name=eye"
 	},
 	"devDependencies": {
-		"@cloudflare/workers-types": "^4.20230307.0",
-		"@shoelace-style/shoelace": "^2.4.0",
-		"pagery": "^0.4.0",
+		"@cloudflare/workers-types": "^4.20230914.0",
+		"@shoelace-style/shoelace": "^2.8.0",
+		"esbuild": "^0.19.3",
+		"pagery": "^0.5.1",
 		"shoelace-fontawesome-pug": "^6.2.1",
 		"shoelace-pug-loader": "^1.0.2",
-		"typescript": "^4.9.5",
-		"wrangler": "^2.12.2"
+		"typescript": "^5.2.2"
 	},
 	"dependencies": {
-		"hono": "^3.0.3"
+		"hono": "^3.7.2"
 	}
 }
