--- a/package.json
+++ b/package.json
@@ -6,17 +6,17 @@
 		"build": "npm run build:app && npm run build:uijs",
 		"build:app": "esbuild --bundle src/index.ts --format=esm --outfile=dist/_worker.js",
 		"build:uijs": "esbuild --bundle src/frontend/ui.ts --format=esm --outfile=dist/ui.js",
-		"pagery": "node ./node_modules/pagery/dist/pagery.js --output=dist/",
+		"pagery": "node ./node_modules/pagery/dist/pagery.js --output=dist/ --outputCss=false",
 		"dev": "npm run build && npm run pagery && npx wrangler pages dev dist/ --kv eye",
 		"publish": "npm run build && npx wrangler pages publish dist/ --project-name=eye"
 	},
 	"devDependencies": {
-		"@cloudflare/workers-types": "^4.20230914.0",
-		"@shoelace-style/shoelace": "^2.8.0",
-		"esbuild": "^0.19.3",
-		"pagery": "^0.5.1",
-		"shoelace-fontawesome-pug": "^6.2.1",
-		"shoelace-pug-loader": "^1.0.2",
+		"@cloudflare/workers-types": "^4.20231016.0",
+		"@shoelace-style/shoelace": "^2.11.0",
+		"esbuild": "^0.19.5",
+		"pagery": "^0.6.4",
+		"shoelace-fontawesome-pug": "^6.4.3",
+		"shoelace-pug-loader": "^2.11.0",
 		"typescript": "^5.2.2"
 	},
 	"dependencies": {
