--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"build:uijs": "esbuild --bundle src/frontend/ui.ts --format=esm --outfile=dist/ui.js",
 		"pagery": "node ./node_modules/pagery/dist/pagery.js --output=dist/ --outputCss=false",
 		"dev": "npm run build && npm run pagery && npx wrangler pages dev dist/ --kv eye",
-		"publish": "npm run build && npx wrangler pages publish dist/ --project-name=eye"
+		"publish": "npm run build && npx wrangler pages deploy dist/ --project-name=eye"
 	},
 	"devDependencies": {
 		"@cloudflare/workers-types": "^4.20231025.0",
